--- a/china-coast-gaurd-patrols/timeline.html
+++ b/china-coast-gaurd-patrols/timeline.html
@@ -2,6 +2,9 @@
   <head>
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
     <script type="text/javascript">
+
+      //* Code written by CSIS AMTI Program *//
+      
       google.charts.load('current', {'packages':['timeline']});
       google.charts.setOnLoadCallback(drawChart);
 
