Update power projection map to not use google sheets

--- a/china-map/index.html
+++ b/china-map/index.html
@@ -16,6 +16,6 @@
 
   <body>
     <script src="js/makeMap.js"></script>
-    <script src="js/chinapower.js"></script>
+    <script src="js/china.js"></script>
   </body>
 </html>
