Commit work in progress

--- a/pacific-islands-scrolly/src/index.html
+++ b/pacific-islands-scrolly/src/index.html
@@ -12,6 +12,7 @@
   </head>
   <body>
     <main id="scrolly-island-interactive"></main>
+    <script src="https://apis.google.com/js/api.js"></script>
     <script src="<%= htmlWebpackPlugin.files.chunks.main.entry %>"></script>
   </body>
 </html>
