--- a/range-rings-scrolly/public/index.html
+++ b/range-rings-scrolly/public/index.html
@@ -3,16 +3,15 @@
 
 <head>
   <meta charset="utf-8" />
-  <!-- <link rel="shortcut icon" href="%PUBLIC_URL%/favicon-32x32.png" /> -->
+  <link rel="shortcut icon" href="%PUBLIC_URL%/images/favicon-32x32.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="" />
-  <!-- <link rel="apple-touch-icon" href="favicon-32x32.png" /> -->
+  <link rel="apple-touch-icon" href="favicon-32x32.png" />
   <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-  <!-- <link rel="manifest" href="%PUBLIC_URL%/manifest.json" /> -->
   <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -25,18 +24,18 @@
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Frank+Ruhl+Libre&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://api.tiles.mapbox.com/mapbox-gl-js/v1.2.1/mapbox-gl.css">
-  <title>Range Rings Scrolly Map</title>
+  <title>By Air, Land, And Sea: China's Maritime Power Projection Network</title>
   <meta property="og:locale" content="en_US">
   <meta property="og:type" content="website">
-  <meta property="og:title" content="Range Rings Scrolly Map" id="ogTitle">
+  <meta property="og:title" content="By Air, Land, And Sea: China's Maritime Power Projection Network" id="ogTitle">
   <meta property="og:description"
-    content=""
+    content="China’s deployment of radar, anti-ship and anti-air missile platforms, and combat aircraft to its outposts in the South China Sea has greatly expanded its ability to project power in waters far from its own coast. This feature will illustrate how these three capabilities are fundamentally linked, and how China’s aircraft carriers can take advantage of them to comfortably conduct operations at greater distances."
     id="ogDesc">
-  <!-- <meta property="og:image" content="%PUBLIC_URL%/TP-cover.png" id="ogImg"> -->
-  <meta property="twitter:title" content="Range Rings Scrolly Map" id="twitterTitle">
+  {# <meta property="og:image" content="%PUBLIC_URL%/images/TP-cover.png" id="ogImg"> #}
+  <meta property="twitter:title" content="By Air, Land, And Sea: China's Maritime Power Projection Network" id="twitterTitle">
   <meta property="twitter:card" content="summary" id="twitterSummary">
   <meta property="twitter:description"
-    content=""
+    content="China’s deployment of radar, anti-ship and anti-air missile platforms, and combat aircraft to its outposts in the South China Sea has greatly expanded its ability to project power in waters far from its own coast. This feature will illustrate how these three capabilities are fundamentally linked, and how China’s aircraft carriers can take advantage of them to comfortably conduct operations at greater distances."
     id="twitterDesc">
   <!-- <meta property="twitter:image" content="%PUBLIC_URL%/TP-cover.png" id="twitterImg"> -->
 
