--- a/range-rings-scrolly/public/index.html
+++ b/range-rings-scrolly/public/index.html
@@ -3,11 +3,11 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="shortcut icon" href="%PUBLIC_URL%/images/favicon-32x32.png" />
+  <link rel="shortcut icon" href="%PUBLIC_URL%/images/favicon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="" />
-  <link rel="apple-touch-icon" href="favicon-32x32.png" />
+  <link rel="apple-touch-icon" href="favicon.png" />
   <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
