Add google analytics

--- a/range-rings-scrolly/public/index.html
+++ b/range-rings-scrolly/public/index.html
@@ -31,13 +31,13 @@
   <meta property="og:description"
     content="China’s deployment of radar, anti-ship and anti-air missile platforms, and combat aircraft to its outposts in the South China Sea has greatly expanded its ability to project power in waters far from its own coast. This feature will illustrate how these three capabilities are fundamentally linked, and how China’s aircraft carriers can take advantage of them to comfortably conduct operations at greater distances."
     id="ogDesc">
-  {# <meta property="og:image" content="%PUBLIC_URL%/images/TP-cover.png" id="ogImg"> #}
+  <meta property="og:image" content="%PUBLIC_URL%/images/TP-cover.png" id="ogImg">
   <meta property="twitter:title" content="By Air, Land, And Sea: China's Maritime Power Projection Network" id="twitterTitle">
   <meta property="twitter:card" content="summary" id="twitterSummary">
   <meta property="twitter:description"
     content="China’s deployment of radar, anti-ship and anti-air missile platforms, and combat aircraft to its outposts in the South China Sea has greatly expanded its ability to project power in waters far from its own coast. This feature will illustrate how these three capabilities are fundamentally linked, and how China’s aircraft carriers can take advantage of them to comfortably conduct operations at greater distances."
     id="twitterDesc">
-  <!-- <meta property="twitter:image" content="%PUBLIC_URL%/TP-cover.png" id="twitterImg"> -->
+  <meta property="twitter:image" content="%PUBLIC_URL%/images/TP-cover.png" id="twitterImg"> 
 
 </head>
 
@@ -54,6 +54,16 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-RLXWY2HW64"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-RLXWY2HW64');
+    </script>
 </body>
 
 </html>
