--- a/scs-survey-maps/scs-line-map/index.html
+++ b/scs-survey-maps/scs-line-map/index.html
@@ -23,10 +23,7 @@
 
   <!-- Include ChoicesJS -->
   <script src="https://cdn.jsdelivr.net/npm/choices.js@10.1.0/public/assets/scripts/choices.min.js"></script>
-  <link
-  rel="stylesheet"
-  href="https://cdn.jsdelivr.net/npm/choices.js@10.1.0/public/assets/styles/choices.min.css"
-  />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/choices.js@10.1.0/public/assets/styles/choices.min.css" />
 
   <link rel="preconnect stylesheet" href="https://use.typekit.net/ats0hoc.css" />
 
@@ -73,10 +70,10 @@
       <section class="widget select">
         <h3 class="mobile-toggle translate subheading">Select</h3>
         <label for="ship-select" aria-label="Select" aria-hidden="true" hidden>Select</label>
-        <select class="choices" name="ships" id="ship-select"data-type="select-multiple" multiple>
-            <option value="">--Please choose an option--</option>
+        <select class="choices" name="ships" id="ship-select" data-type="select-multiple" multiple>
+          <option value="">--Please choose an option--</option>
         </select>
-        
+
       </section>
       <section class="widget date_range">
         <h3 class="mobile-toggle translate subheading">Date Range</h3>
