Modify filter options

--- a/scs-survey-maps/scs-line-map/index.html
+++ b/scs-survey-maps/scs-line-map/index.html
@@ -75,22 +75,21 @@
         </select>
 
       </section>
-      <section class="widget date_range">
+      <section class="widget survey_type">
         <h3 class="mobile-toggle translate subheading">Date Range</h3>
         <ul class="actions">
           <li>
-            <label for="2020">
-              <input class="widget checkbox" type="checkbox" name="2020" id="2020" checked="" />
+            <label for="Seabed">
+              <input class="widget checkbox" type="checkbox" name="Seabed" id="Seabed" checked="" />
               <span class="colorKey"></span>
-              <span class="itemText" style="transform: translateY(14.1667%);">2020</span>
+              <span class="itemText" style="transform: translateY(14.1667%);">Seabed</span>
             </label>
           </li>
-
           <li>
-            <label for="2021">
-              <input class="widget checkbox" type="checkbox" name="2021" id="2021" checked="" />
+            <label for="Other">
+              <input class="widget checkbox" type="checkbox" name="Other" id="Other" checked="" />
               <span class="colorKey"></span>
-              <span class="itemText" style="transform: translateY(14.1667%);">2021</span>
+              <span class="itemText" style="transform: translateY(14.1667%);">Other</span>
             </label>
           </li>
         </ul>
