--- a/scs-survey-maps/scs-line-map/index.html
+++ b/scs-survey-maps/scs-line-map/index.html
@@ -59,7 +59,7 @@
 
       <section>
         <p class="translate description open-sans mobile-toggle"> Hover over the interactive map to learn more details
-          about scs survey ships in the South China Sea. Toggle different years on and off by checking the boxes below.
+          about scs survey ships in the South China Sea. Toggle survey types on and off by checking the boxes below.
         </p>
         <div class="separator mobile-toggle"></div>
         <div id="controls" />
@@ -76,7 +76,7 @@
 
       </section>
       <section class="widget survey_type">
-        <h3 class="mobile-toggle translate subheading">Date Range</h3>
+        <h3 class="mobile-toggle translate subheading">Survey Type</h3>
         <ul class="actions">
           <li>
             <label for="Seabed">
