--- a/scs-survey-maps/scs-line-map/index.html
+++ b/scs-survey-maps/scs-line-map/index.html
@@ -49,7 +49,7 @@
     <div class="box">
       <header class="mobile-toggle">
         <h1 class="translate">
-          SCS Survey Map
+          Chinese Surveys in the South China Sea
         </h1>
 
         <a href="https://amti.csis.org" target="_blank"
@@ -58,8 +58,8 @@
       </header>
 
       <section>
-        <p class="translate description open-sans mobile-toggle"> Hover over the interactive map to learn more details
-          about scs survey ships in the South China Sea. Toggle survey types on and off by checking the boxes below.
+        <p class="translate description open-sans mobile-toggle"> Explore China's survey activities in the South China
+          Sea. Click on a survey path to see vessel name and dates.
         </p>
         <div class="separator mobile-toggle"></div>
         <div id="controls" />
