Modify subheading label

--- a/scs-survey-maps/scs-line-map/index.html
+++ b/scs-survey-maps/scs-line-map/index.html
@@ -68,7 +68,7 @@
 
       <!-- TODO: update the class name for section -->
       <section class="widget select">
-        <h3 class="mobile-toggle translate subheading">Select</h3>
+        <h3 class="mobile-toggle translate subheading">Survey Vessel</h3>
         <label for="ship-select" aria-label="Select" aria-hidden="true" hidden>Select</label>
         <select class="choices" name="ships" id="ship-select" data-type="select-multiple" multiple>
           <option value="">--Please choose an option--</option>
