Update key value on SCS map

--- a/scs-survey-maps/index.html
+++ b/scs-survey-maps/index.html
@@ -82,7 +82,7 @@
             <label for="Seabed">
               <input class="widget checkbox" type="checkbox" name="Seabed" id="Seabed" checked="" />
               <span class="colorKey"></span>
-              <span class="itemText" style="transform: translateY(14.1667%);">Seabed</span>
+              <span class="itemText" style="transform: translateY(14.1667%);">Seabed (confident)</span>
             </label>
           </li>
           <li>
