--- a/scs-survey-maps/index.html
+++ b/scs-survey-maps/index.html
@@ -49,7 +49,7 @@
     <div class="box">
       <header class="mobile-toggle">
         <h1 class="translate">
-          Chinese Surveys in the South China Sea
+          Chinese Surveys in the South China Sea (2020-2021)
         </h1>
 
         <a href="https://amti.csis.org" target="_blank"
