Resolve title bug on mobile menu

--- a/scs-survey-maps/index.html
+++ b/scs-survey-maps/index.html
@@ -42,7 +42,7 @@
         <span></span>
       </div>
       <div class="menu-translate">
-        SCS Survey Map
+        Chinese Surveys in the South China Sea (2020-2021)
       </div>
     </div>
 
