update the title

--- a/east-china-sea-oil-rig-locations-map/index.html
+++ b/east-china-sea-oil-rig-locations-map/index.html
@@ -58,7 +58,7 @@
 
     <section class="toolbox">
       <header>
-        <h1 class="box-header"><span>Title</span> <span>Map</span></h1>
+        <h1 class="box-header"><span>East China Sea</span> <span>Oil Rig Locations</span></h1>
       </header>
       <p class="description">
         Click to learn more.
