Add legends - Work in progess

--- a/east-china-sea-oil-rig-locations-map/index.html
+++ b/east-china-sea-oil-rig-locations-map/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Title | Asia Maritime Transparency Initiative</title>
+    <title>East China Sea Oil Rig Locations | Asia Maritime Transparency Initiative</title>
     <meta name="viewport" content="initial-scale=1.0" />
     <meta charset="utf-8" />
     <link
@@ -18,7 +18,7 @@
     <meta property="og:type" content="article" />
     <meta
       property="og:title"
-      content="Title - CSIS - Asia Maritime Transparency Initiative"
+      content="East China Sea Oil Rig Locations - CSIS - Asia Maritime Transparency Initiative"
     />
 
     <script src="https://unpkg.com/babel-polyfill@6.26.0/dist/polyfill.js"></script>
@@ -50,7 +50,12 @@
     <!-- Google font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Spectral:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
+    <!-- <link href="https://fonts.googleapis.com/css2?family=Spectral:wght@300;400;500;600;700;800&display=swap" rel="stylesheet"> -->
+    <link href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet"> 
+
   </head>
   
   <body>
@@ -63,6 +68,15 @@
       <p class="description">
         Click to learn more.
       </p>
+      <div class="legends">
+        <ul id="legend" class="legend" data-type="legends">
+          <li class="legend__value"><span id="ramp1"></span><span class="legend-text">New Rig</span></li>
+          <li class="legend__value"><span id="ramp2"></span><span>Old Rig</span></li>
+          <li class="legend__value"><span id="ramp3"></span><span>Japan Continental Shelf</span></li>
+          <li class="legend__value"><span id="ramp4"></span><span>China Continental Shelf</span></li>
+          <li class="legend__value"><span id="ramp5"></span><span>Joint Development Zone</span></li>
+        </ul>
+      </div>
     </section>
 
     <section class="panel">
