--- a/east-china-sea-oil-rig-locations-map/index.html
+++ b/east-china-sea-oil-rig-locations-map/index.html
@@ -70,8 +70,8 @@
       </p>
       <div class="legends">
         <ul id="legend" class="legend" data-type="legends">
-          <li class="legend__value"><span id="ramp1"></span><span class="legend-text">New Rig</span></li>
-          <li class="legend__value"><span id="ramp2"></span><span>Old Rig</span></li>
+          <li class="legend__value"><div class="container"><span id="ramp1"></span></div><span class="legend-text">New Rig</span></li>
+          <li class="legend__value"><div class="container"><span id="ramp2"></span></div><span>Old Rig</span></li>
           <li class="legend__value"><span id="ramp3"></span><span>Japan Continental Shelf</span></li>
           <li class="legend__value"><span id="ramp4"></span><span>China Continental Shelf</span></li>
           <li class="legend__value"><span id="ramp5"></span><span>Joint Development Zone</span></li>
