--- a/east-china-sea-oil-rig-locations-map/index.html
+++ b/east-china-sea-oil-rig-locations-map/index.html
@@ -68,14 +68,12 @@
       <p class="description">
         Click to learn more.
       </p>
-      <div class="legends">
-        <ul id="legend" class="legend" data-type="legends">
-          <li class="legend__value"><div class="container"><span id="ramp1"></span></div><span class="legend-text">New Rig</span></li>
-          <li class="legend__value"><div class="container"><span id="ramp2"></span></div><span>Old Rig</span></li>
-          <li class="legend__value"><span id="ramp3"></span><span>Japan Continental Shelf</span></li>
-          <li class="legend__value"><span id="ramp4"></span><span>China Continental Shelf</span></li>
-          <li class="legend__value"><span id="ramp5"></span><span>Joint Development Zone</span></li>
-        </ul>
+      <div class="container">
+        <span class="circle new"></span><span class="text">New Rig</span>
+        <span class="circle old"></span><span class="text">Old Rig</span>
+        <span class="line japan"></span><span class="text">Japan</span>
+        <span class="line china"></span><span class="text">China</span>
+        <span class="line joint"></span><span class="text">Joint Development</span>
       </div>
     </section>
 
