--- a/east-china-sea-oil-rig-locations-map/index.html
+++ b/east-china-sea-oil-rig-locations-map/index.html
@@ -1,17 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Title | Asia Maritime Transparency Initiative</title>
+    <title>East China Sea Oil Rig Locations | Asia Maritime Transparency Initiative</title>
     <meta name="viewport" content="initial-scale=1.0" />
     <meta charset="utf-8" />
-    <link
-      href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,700"
-      rel="stylesheet"
-    />
 
     <!-- Share meta -->
     <meta property="og:locale" content="en_US" />
@@ -50,7 +42,8 @@
     <!-- Google font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Spectral:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow&display=swap" rel="stylesheet">
   </head>
   
   <body>
@@ -63,12 +56,16 @@
       <p class="description">
         Click to learn more.
       </p>
+      <p class="subtitle">Legend</p>
+      <div class="container">
+        <span class="circle new"></span><span class="text">New Rig</span>
+        <span class="circle old"></span><span class="text">Old Rig</span>
+        <span class="line japan"></span><span class="text">Japan</span>
+        <span class="line china"></span><span class="text">China</span>
+        <span class="line joint"></span><span class="text">Joint Development</span>
+      </div>
     </section>
 
-    <section class="panel">
-      <button class="close-btn">&times;</button>
-      <div class="panel-content"></div>
-    </section>
     <footer class="js-footer"></footer>
 
     <script src="js/map.js"></script>
