--- a/east-china-sea-oil-rig-locations-map/index.html
+++ b/east-china-sea-oil-rig-locations-map/index.html
@@ -4,14 +4,6 @@
     <title>East China Sea Oil Rig Locations | Asia Maritime Transparency Initiative</title>
     <meta name="viewport" content="initial-scale=1.0" />
     <meta charset="utf-8" />
-    <link
-      href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,700"
-      rel="stylesheet"
-    />
 
     <!-- Share meta -->
     <meta property="og:locale" content="en_US" />
@@ -50,10 +42,7 @@
     <!-- Google font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <!-- <link href="https://fonts.googleapis.com/css2?family=Spectral:wght@300;400;500;600;700;800&display=swap" rel="stylesheet"> -->
     <link href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet"> 
 
   </head>
@@ -68,6 +57,7 @@
       <p class="description">
         Click to learn more.
       </p>
+      <p class="subtitle">Legend</p>
       <div class="container">
         <span class="circle new"></span><span class="text">New Rig</span>
         <span class="circle old"></span><span class="text">Old Rig</span>
