--- a/east-china-sea-oil-rig-locations-map/index.html
+++ b/east-china-sea-oil-rig-locations-map/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>East China Sea Oil Rig Locations | Asia Maritime Transparency Initiative</title>
+    <title>
+      East China Sea Oil Rig Locations | Asia Maritime Transparency Initiative
+    </title>
     <meta name="viewport" content="initial-scale=1.0" />
     <meta charset="utf-8" />
 
@@ -16,17 +18,22 @@
     <script src="https://unpkg.com/babel-polyfill@6.26.0/dist/polyfill.js"></script>
 
     <!-- Include new Leaflet CSS -->
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
-    integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
-    crossorigin=""/>
-    <!-- Include new Leaflet CSS -->
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/leaflet@1.9.1/dist/leaflet.css"
+      integrity="sha256-sA+zWATbFveLLNqWO2gtiw3HL/lh1giY/Inf1BJ0z14="
+      crossorigin=""
+    />
+
     <!-- Make sure you put this AFTER Leaflet's CSS -->
-    <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
-    integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
-    crossorigin=""></script>
-    
+    <script
+      src="https://unpkg.com/leaflet@1.9.1/dist/leaflet.js"
+      integrity="sha256-NDI0K41gVbWqfkkaHj15IzU7PtMoelkzyKp8TOaFQ3s="
+      crossorigin=""
+    ></script>
+
     <!-- Include CARTO.js -->
-    <script src="https://libs.cartocdn.com/carto.js/v4.1.11/carto.min.js"></script>
+    <script src="https://libs.cartocdn.com/carto.js/v4.2.0/carto.min.js"></script>
     <link
       href="https://carto.com/developers/carto-js/examples/maps/public/style.css"
       rel="stylesheet"
@@ -40,27 +47,40 @@
     <link href="css/map.css" rel="stylesheet" />
 
     <!-- Google font -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow&display=swap"
+      rel="stylesheet"
+    />
   </head>
-  
+
   <body>
     <div id="map" class="map" tabindex="0"></div>
 
     <section class="toolbox">
       <header>
-        <h1 class="box-header"><span>East China Sea</span> <span>Oil Rig Locations</span></h1>
+        <h1 class="box-header">
+          <span>East China Sea</span> <span>Oil Rig Locations</span>
+        </h1>
       </header>
       <div class="container">
-        <span class="circle new"></span><span class="text">New Rig</span>
-        <span class="circle old"></span><span class="text">Old Rig</span>
+        <span class="circle new"></span
+        ><span class="text">New Permanent Rig</span>
+        <span class="circle old"></span
+        ><span class="text">Old Permanent Rig</span>
+        <span class="square mobile"></span><span class="text">Mobile Rig</span>
         <span class="line japan"></span><span class="text">Japan</span>
         <span class="line china"></span><span class="text">China</span>
-        <span class="line joint"></span><span class="text">Joint Development</span>
+        <span class="line joint"></span
+        ><span class="text">Joint Development</span>
       </div>
     </section>
+    <a href="http://" target="_blank" rel="noopener noreferrer"></a>
 
     <footer class="js-footer"></footer>
 
