Update stroke color and size

--- a/east-china-sea-oil-rig-locations-map/index.html
+++ b/east-china-sea-oil-rig-locations-map/index.html
@@ -73,11 +73,11 @@
         ><span class="text">New Permanent Rig</span>
         <span class="circle old"></span
         ><span class="text">Old Permanent Rig</span>
-        <span class="square mobile"></span><span class="text">Mobile Rig</span>
-        <span class="line japan"></span><span class="text">Japan</span>
-        <span class="line china"></span><span class="text">China</span>
+        <span class="square mobile"></span><span class="text">New Mobile Rig</span>
+        <span class="line japan"></span><span class="text">Japan Continental Shelf</span>
+        <span class="line china"></span><span class="text">China Continental Shelf</span>
         <span class="line joint"></span
-        ><span class="text">Joint Development</span>
+        ><span class="text">Joint Development Zone</span>
       </div>
     </section>
     <a href="http://" target="_blank" rel="noopener noreferrer"></a>
