Update title, legend, popup content

--- a/east-china-sea-oil-rig-locations-map/index.html
+++ b/east-china-sea-oil-rig-locations-map/index.html
@@ -65,14 +65,14 @@
     <section class="toolbox">
       <header>
         <h1 class="box-header">
-          <span>East China Sea</span> <span>Oil Rig Locations</span>
+          <span>Oil and Gas Platforms</span> <span>in the East China Sea</span>
         </h1>
       </header>
       <div class="container">
         <span class="circle new"></span
         ><span class="text">New Permanent Rig</span>
         <span class="circle old"></span
-        ><span class="text">Old Permanent Rig</span>
+        ><span class="text">Permanent Rig</span>
         <span class="square mobile"></span><span class="text">New Mobile Rig</span>
         <span class="line japan"></span><span class="text">Japan Continental Shelf</span>
         <span class="line china"></span><span class="text">China Continental Shelf</span>
