Update title and carto css style

--- a/east-china-sea-oil-rig-locations-map/index.html
+++ b/east-china-sea-oil-rig-locations-map/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>
-      East China Sea Oil Rig Locations | Asia Maritime Transparency Initiative
+      Oil and Gas Platforms in the East China Sea | Asia Maritime Transparency Initiative
     </title>
     <meta name="viewport" content="initial-scale=1.0" />
     <meta charset="utf-8" />
