--- a/east-china-sea-oil-rig-locations-map/index.html
+++ b/east-china-sea-oil-rig-locations-map/index.html
@@ -74,8 +74,8 @@
         <span class="circle old"></span
         ><span class="text">Permanent Rig</span>
         <span class="square mobile"></span><span class="text">New Mobile Rig</span>
-        <span class="line japan"></span><span class="text">Japan Continental Shelf</span>
-        <span class="line china"></span><span class="text">China Continental Shelf</span>
+        <span class="line japan"></span><span class="text">Japan Continental Shelf Claim</span>
+        <span class="line china"></span><span class="text">China Continental Shelf Claim</span>
         <span class="line joint"></span
         ><span class="text">Joint Development Zone</span>
       </div>
