--- a/east-china-sea-oil-rig-locations-map/src/index.html
+++ b/east-china-sea-oil-rig-locations-map/src/index.html
@@ -80,6 +80,6 @@
     </section>
     <footer class="js-footer"></footer>
 
-    <script src="js/map.js"></script>
+    <script src="js/index.js"></script>
   </body>
 </html>
