--- a/coast-guard-timeline-2022/index.html
+++ b/coast-guard-timeline-2022/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+    <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
     <div id="timeline-tooltip" style="height: 100%;"></div>
