Update map title, description, and categories by year

--- a/enhanced_defense_cooperation_agreement/index.html
+++ b/enhanced_defense_cooperation_agreement/index.html
@@ -4,12 +4,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Enhanced Defense Cooperation Agreement | AMTI | CSIS</title>
+  <title>Facility Upgrades at Enhanced Defense Cooperate Agreement Sites | AMTI | CSIS</title>
 
   <!-- Share meta -->
   <meta property="og:locale" content="en_US" />
   <meta property="og:type" content="article" />
-  <meta property="og:title" content="Enhanced Defense Cooperation Agreement - Asia Maritime Transparency Initiative" />
+  <meta property="og:title" content="Facility Upgrades at Enhanced Defense Cooperate Agreement Sites - Asia Maritime Transparency Initiative" />
 
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,700" rel="stylesheet" />
@@ -48,41 +48,37 @@
         <span></span>
       </div>
       <div class="menu-translate">
-        Enhanced Defense Cooperation Agreement
+        Facility Upgrades at Enhanced Defense Cooperate Agreement Sites
       </div>
     </div>
     <div class="box">
       <header class="mobile-toggle">
         <h1 class="translate">
-          Enhanced Defense Cooperation Agreement
+          Facility Upgrades at Enhanced Defense Cooperate Agreement Sites
         </h1>
         <a href="https://amti.csis.org" target="_blank"
           style="background-image: url(&quot;https://raw.githubusercontent.com/CSIS-iLab/amti-viz/master/logo.jpeg&quot;)"
           class="mobile-toggle" id="logo"></a>
       </header>
       <section>
-        <p class="translate description open-sans mobile-toggle">Explore a map of recent and ongoing strategic
-          investments and facility upgrades in the Pacific.</p>
+        <p class="translate description open-sans mobile-toggle">Explore a map of Enhanced Defense Cooperation Agreement (EDCA) sites and click to learn about planned EDCA projects and
+        other recent facility upgrades.</p>
         <div class="separator mobile-toggle"></div>
         <div id="controls">
           <div id="info"></div>
         </div>
       </section>
       <section class="widget country_ownership">
-        <h3 class="mobile-toggle translate">Country</h3>
+        <h3 class="mobile-toggle translate">EDCA Site Designation Year</h3>
         <ul class="actions">
           <li>
-            <label for="Naval Force"><span class="colorKey" name="Naval Force" id="Naval Force"></span><span
-                class="itemText" style="transform: translateY(14.1667%);">Naval Force</span></label>
+            <label for="2023"><span class="colorKey" name="2023" id="2023"></span><span
+                class="itemText" style="transform: translateY(14.1667%);">2023</span></label>
           </li>
 
           <li>
-            <label for="Air Force"><span class="colorKey" name="Air Force" id="Air Force"></span><span class="itemText"
-                style="transform: translateY(14.1667%);">Air Force</span></label>
-          </li>
-          <li>
-            <label for="Armed Force"><span class="colorKey" name="Armed Force" id="Armed Force"></span><span
-                class="itemText" style="transform: translateY(14.1667%);">Armed Force</span></label>
+            <label for="2016"><span class="colorKey" name="2016" id="2016"></span><span class="itemText"
+                style="transform: translateY(14.1667%);">2016</span></label>
           </li>
         </ul>
       </section>
