--- a/enhanced_defense_cooperation_agreement/index.html
+++ b/enhanced_defense_cooperation_agreement/index.html
@@ -32,7 +32,7 @@
 
   <link rel="preconnect stylesheet" href="https://use.typekit.net/ats0hoc.css" />
 
-  <link href="css/makeMap.css" rel="stylesheet" />
+  <link rel="stylesheet" href="css/makeMap.css" />
   <link rel="stylesheet" href="css/styles.css">
 </head>
 
