Update map title

--- a/enhanced_defense_cooperation_agreement/index.html
+++ b/enhanced_defense_cooperation_agreement/index.html
@@ -4,12 +4,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Facility Upgrades at Enhanced Defense Cooperate Agreement Sites | AMTI | CSIS</title>
+  <title>Facility Upgrades at Enhanced Defense Cooperation Agreement Sites | AMTI | CSIS</title>
 
   <!-- Share meta -->
   <meta property="og:locale" content="en_US" />
   <meta property="og:type" content="article" />
-  <meta property="og:title" content="Facility Upgrades at Enhanced Defense Cooperate Agreement Sites - Asia Maritime Transparency Initiative" />
+  <meta property="og:title" content="Facility Upgrades at Enhanced Defense Cooperation Agreement Sites - Asia Maritime Transparency Initiative" />
 
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,700" rel="stylesheet" />
@@ -48,13 +48,13 @@
         <span></span>
       </div>
       <div class="menu-translate">
-        Facility Upgrades at Enhanced Defense Cooperate Agreement Sites
+        Facility Upgrades at Enhanced Defense Cooperation Agreement Sites
       </div>
     </div>
     <div class="box">
       <header class="mobile-toggle">
         <h1 class="translate">
-          Facility Upgrades at Enhanced Defense Cooperate Agreement Sites
+          Facility Upgrades at Enhanced Defense Cooperation Agreement Sites
         </h1>
         <a href="https://amti.csis.org" target="_blank"
           style="background-image: url(&quot;https://raw.githubusercontent.com/CSIS-iLab/amti-viz/master/logo.jpeg&quot;)"
